force-app/main/default/objects/PermissionPackItem__c/PermissionPackItem__c.object-meta.xml
<CustomObject>
    <description>Maintain the correct permissions that should be deployed or used for comparison in/against the different environments.</description>
    <label>Permission Pack Item</label>
    <nameField>
        <displayFormat>PPI-{0000000}</displayFormat>
        <label>Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Permission Pack Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>