force-app/main/default/objects/PermissionPackItem__c/fields/ComponentName__c.field-meta.xml
<CustomField>
    <fullName>ComponentName__c</fullName>
    <description>The name of the component to be configured,

This name is unique and acts as the component ID.</description>
    <inlineHelpText>Identifying name of the component.</inlineHelpText>
    <label>Component name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>