force-app/main/default/objects/PermissionPackItem__c/fields/Enable__c.field-meta.xml
<CustomField>
    <fullName>Enable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the component is enabled (or not).</description>
    <inlineHelpText>Indicates whether users with the permission package assigned to them can (or cannot) use the component.</inlineHelpText>
    <label>Enable</label>
    <type>Checkbox</type>
</CustomField>