force-app/main/default/objects/PermissionPackItem__c/fields/FieldPermission__c.field-meta.xml
<CustomField>
    <fullName>FieldPermission__c</fullName>
    <description>Indicates if the fields are accessible and the kind of access..
Read. Indicates whether the field can be read (or not).
Edit. Indicates whether the field can be edited (or not).
Disabled:  Indicates explicitly that this permission must NOT be set in this permission pack (allows to remove the permission when deployed to an environment in case the permission was previously set).
Not Available:  Indicates that this data does not available to the record type defined for the given record.</description>
    <inlineHelpText>* Read: Indicates whether the field can be read (or not)　　　　　　　　　　　　　　　　　　
* Edit: Indicates whether the field can be edited (or not)　　　　　　　　　　　　　　　　　　
* Disabled:  Indicates explicitly that this permission must NOT be set in this permission pack (allows to remove the permission when deployed to an environment in case the permission was previously set).</inlineHelpText>
    <label>Field Permission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pkl_Read</fullName>
                <label>Read</label>
            </value>
            <value>
                <fullName>pkl_Edit</fullName>
                <label>Edit</label>
            </value>
            <value>
                <fullName>pkl_Disabled</fullName>
                <label>Disabled</label>
            </value>
            <value>
                <fullName>pkl_N/A</fullName>
                <label>Not Available</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>