force-app/main/default/objects/PermissionPackItem__c/fields/ObjectAllRecords__c.field-meta.xml
<CustomField>
    <fullName>ObjectAllRecords__c</fullName>
    <description>* No: Indicates that sharing settings for the object will control access to the object&apos;s records.,
* View: Indicates whether the all object&apos;s records can be viewed (or not), regardless of the sharing settings for the object. Includes private records (records with no parent object).
* Modify: Indicates whether the all object&apos;s records can be viewed, edited, or deleted (or not), regardless of the sharing settings for the object. Includes private records (records with no parent object).</description>
    <inlineHelpText>* No: Indicates that sharing settings for the object will control access to the object&apos;s records.　　　　
* View: Indicates whether the all object&apos;s records can be viewed (or not), regardless of the sharing settings for the object. Includes private records (records with no parent object).　　　　　　　　　　　　　　　　　　
* Modify: Indicates whether the all object&apos;s records can be viewed, edited, or deleted (or not), regardless of the sharing settings for the object. Includes private records (records with no parent object)</inlineHelpText>
    <label>All Records</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pkl_No</fullName>
                <label>No</label>
            </value>
            <value>
                <fullName>pkl_View</fullName>
                <label>View</label>
            </value>
            <value>
                <fullName>pkl_Modify</fullName>
                <label>Modify</label>
            </value>
            <value>
                <fullName>pkl_N/A</fullName>
                <label>Not Available</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>