force-app/main/default/objects/PermissionPackItem__c/fields/ObjectCreate__c.field-meta.xml
<CustomField>
    <fullName>ObjectCreate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether new records can be created (or not) in the object</description>
    <inlineHelpText>Allows to create (or not) a new records on an object</inlineHelpText>
    <label>Create</label>
    <type>Checkbox</type>
</CustomField>