force-app/main/default/objects/PermissionPackItem__c/fields/ObjectDelete__c.field-meta.xml
<CustomField>
    <fullName>ObjectDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether it is allowed (or not) to delete the records of the object</description>
    <inlineHelpText>Allows deleting (or not) object&apos;s records</inlineHelpText>
    <label>Delete</label>
    <type>Checkbox</type>
</CustomField>