force-app/main/default/objects/PermissionPackItem__c/fields/ObjectEdit__c.field-meta.xml
<CustomField>
    <fullName>ObjectEdit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether (or not) editing of object records is allowed</description>
    <inlineHelpText>Allows editing (or not) of object&apos;s records</inlineHelpText>
    <label>Edit</label>
    <type>Checkbox</type>
</CustomField>