force-app/main/default/objects/PermissionPackItem__c/fields/ObjectRead__c.field-meta.xml
<CustomField>
    <fullName>ObjectRead__c</fullName>
    <description>* True: Indicates that the object&apos;s records can be accessed (read).
* False: Indicates that the object&apos;s records cannot be accessed (read).
* Disabled: Indicates explicitly that this permission must NOT be set in this permission pack (allows to remove the permission when deployed to an environment in case the permission was previously set). It will be translated to &amp;apos;none&amp;apos; value in metadata files</description>
    <inlineHelpText>* True: Indicates that the object&apos;s records can be accessed (read).　　　　　　　　　　　　　　　　　　　　
* False: Indicates that the object&apos;s records cannot be accessed (read).
* Disabled: Indicates explicitly that this permission must NOT be set in this permission pack (allows to remove the permission when deployed to an environment in case the permission was previously set).</inlineHelpText>
    <label>Read</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pkl_True</fullName>
                <label>True</label>
            </value>
            <value>
                <fullName>pkl_Disable</fullName>
                <label>Disable</label>
            </value>
            <value>
                <fullName>pkl_N/A</fullName>
                <label>Not Available</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>