force-app/main/default/objects/PermissionPackItem__c/fields/PermissionPack__c.field-meta.xml
<CustomField>
    <fullName>PermissionPack__c</fullName>
    <description>The package (permission set or package) to which the permission belongs</description>
    <inlineHelpText>The related permission pack</inlineHelpText>
    <label>Permission Pack</label>
    <referenceTo>PermissionPack__c</referenceTo>
    <relationshipLabel>Permissions</relationshipLabel>
    <relationshipName>PermissionPackItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>