force-app/main/default/objects/PermissionPackItem__c/recordTypes/applicationVisibilities.recordType-meta.xml
<RecordType>
    <fullName>applicationVisibilities</fullName>
    <active>true</active>
    <description>Allows access to applications.</description>
    <label>Application</label>
</RecordType>