force-app/main/default/objects/PermissionPackItem__c/recordTypes/Class.recordType-meta.xml
<RecordType>
    <fullName>Class</fullName>
    <active>true</active>
    <description>classAccesses</description>
    <label>Class</label>
</RecordType>