force-app/main/default/objects/PermissionPackItem__c/recordTypes/classAccesses.recordType-meta.xml
<RecordType>
    <fullName>classAccesses</fullName>
    <active>true</active>
    <description>Allows execution of class methods.</description>
    <label>Class</label>
</RecordType>