force-app/main/default/objects/PermissionPackItem__c/recordTypes/customMetadataTypeAccesses.recordType-meta.xml
<RecordType>
    <fullName>customMetadataTypeAccesses</fullName>
    <active>true</active>
    <description>Allows use of custom metadata.</description>
    <label>Custom Metadata</label>
</RecordType>