force-app/main/default/objects/PermissionPackItem__c/recordTypes/customPermissions.recordType-meta.xml
<RecordType>
    <fullName>customPermissions</fullName>
    <active>true</active>
    <description>Allows checking of custom permissions.</description>
    <label>Custom Permission</label>
</RecordType>