force-app/main/default/objects/PermissionPackItem__c/recordTypes/customSettingAccesses.recordType-meta.xml
<RecordType>
    <fullName>customSettingAccesses</fullName>
    <active>true</active>
    <description>Allows use of custom settings.</description>
    <label>Custom Setting</label>
</RecordType>