force-app/main/default/objects/PermissionPackItem__c/recordTypes/externalCredentialPrincipalAccesses.recordType-meta.xml
<RecordType>
    <fullName>externalCredentialPrincipalAccesses</fullName>
    <active>true</active>
    <description>Allows reading of parameters configured in external credentials.</description>
    <label>External Credential Parameter</label>
</RecordType>