force-app/main/default/objects/PermissionPackItem__c/recordTypes/fieldPermissions.recordType-meta.xml
<RecordType>
    <fullName>fieldPermissions</fullName>
    <active>true</active>
    <description>Allows configuration of read and edit access to object fields.</description>
    <label>Field</label>
</RecordType>