force-app/main/default/objects/PermissionPackItem__c/recordTypes/flowAccesses.recordType-meta.xml
<RecordType>
    <fullName>flowAccesses</fullName>
    <active>true</active>
    <description>Allows execution of flows.</description>
    <label>Flow</label>
</RecordType>