force-app/main/default/objects/PermissionPackItem__c/recordTypes/objectPermissions.recordType-meta.xml
<RecordType>
    <fullName>objectPermissions</fullName>
    <active>true</active>
    <description>Allows configuration of access to create, delete, edit, and read records of objects, as well as configuration of the view and modification of all records.</description>
    <label>Object</label>
</RecordType>