force-app/main/default/objects/PermissionPackItem__c/recordTypes/pageAccesses.recordType-meta.xml
<RecordType>
    <fullName>pageAccesses</fullName>
    <active>true</active>
    <description>Allows access to and execution of Visualforce pages.</description>
    <label>Page</label>
</RecordType>