force-app/main/default/objects/PermissionPackItem__c/recordTypes/recordTypeVisibilities.recordType-meta.xml
<RecordType>
    <fullName>recordTypeVisibilities</fullName>
    <active>true</active>
    <description>Allows creation of records in objects with specified record types.</description>
    <label>Record Type</label>
</RecordType>