force-app/main/default/objects/PermissionPackItem__c/recordTypes/tabSettings.recordType-meta.xml
<RecordType>
    <fullName>tabSettings</fullName>
    <active>true</active>
    <description>Allows access to tabs.</description>
    <label>Tab</label>
</RecordType>