force-app/main/default/objects/PermissionPackItem__c/recordTypes/userPermissions.recordType-meta.xml
<RecordType>
    <fullName>userPermissions</fullName>
    <active>true</active>
    <description>Allows activation or deactivation of system parameters.</description>
    <label>System</label>
</RecordType>