force-app/main/default/objects/PermissionPackItem__c/validationRules/NotAllowChangeTheComponentName.validationRule-meta.xml
<ValidationRule>
    <fullName>NotAllowChangeTheComponentName</fullName>
    <active>true</active>
    <description>It is not allowed to rename the component, if necessary recreate it.</description>
    <errorConditionFormula>NOT(ISNEW())  &amp;&amp;  ISCHANGED( ComponentName__c ) &amp;&amp;  NOT($Permission.SensitiveChangeAllowed)</errorConditionFormula>
    <errorDisplayField>ComponentName__c</errorDisplayField>
    <errorMessage>The component name cannot be modified, if you need to change the component you must recreate it.</errorMessage>
</ValidationRule>